--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Piazzolla&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ceviche+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Piazzolla&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ceviche+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap");
 
 * {
   padding: 0;
@@ -51,6 +51,19 @@ body {
   transition: all 0.8s ease-in-out;
 }
 
+.cap {
+  text-transform: uppercase;
+}
+.line-t {
+  text-decoration: overline;
+}
+.line-m {
+  text-decoration: line-through;
+}
+.line-b {
+  text-decoration: underline;
+}
+
 /* Sample CSS for the WHY word */
 
 .whyWLetter {
@@ -59,7 +72,7 @@ body {
   color: aqua;
   text-decoration: underline;
   text-transform: uppercase;
-  font-family: 'Piazolla', sans-serif;
+  font-family: "Piazolla", sans-serif;
 }
 
 .whyHLetter {
@@ -68,7 +81,7 @@ body {
   color: darkgoldenrod;
   text-decoration: overline;
   text-transform: lowercase;
-  font-family: 'Ceviche One', sans-serif;
+  font-family: "Ceviche One", sans-serif;
 }
 
 .whyYLetter {
@@ -77,228 +90,388 @@ body {
   color: coral;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Raleway Dots', sans-serif;
+  font-family: "Raleway Dots", sans-serif;
 }
 
 /* DID word */
 
 .didDLetter {
+  background-color: red;
+  color: green;
 }
 
 .didILetter {
+  background-color: lavenderblush;
+  color: red;
 }
 
 .didDTwoLetter {
+  background-color: lavender;
+  color: firebrick;
 }
 
 /* THE word */
 
 .theTLetter {
+  background-color: khaki;
+  color: gray;
 }
 
 .theHLetter {
+  background-color: lightgreen;
+  color: lawngreen;
 }
 
 .theELetter {
+  background-color: deepskyblue;
+  color: purple;
 }
 
 /* FRONT-END word */
 
 .frontendFLetter {
+  color: purple;
 }
 
 .frontendRLetter {
+  background-color: blueviolet;
+  color: darkgreen;
 }
 
 .frontendOLetter {
+  color: darkgreen;
+  background-color: lemonchiffon;
 }
 
 .frontendNLetter {
+  color: blueviolet;
+  background-color: blanchedalmond;
 }
 
 .frontendTLetter {
+  background-color: orange;
+  color: blue;
 }
 
 .frontendELetter {
+  background-color: blue;
+  color: blanchedalmond;
 }
 
 .frontendNTwoLetter {
+  background-color: red;
+  color: aqua;
 }
 
 .frontendDLetter {
+  background-color: pink;
+  color: aquamarine;
 }
 
 /* DEVELOPER word */
 
 .developerDLetter {
+  background-color: skyblue;
+  color: #282a56;
 }
 .developerELetter {
+  background-color: blueviolet;
+  color: pink;
 }
 .developerVLetter {
+  background-color: olive;
+  color: pink;
 }
 .developerETwoLetter {
+  background-color: darkolivegreen;
+  color: darkseagreen;
 }
 .developerLLetter {
+  background-color: gray;
+  color: pink;
 }
 .developerOLetter {
+  background-color: darkseagreen;
+  color: lightgreen;
 }
 .developerPLetter {
+  color: palevioletred;
+  background-color: lime;
 }
 .developerEThreeLetter {
+  background-color: blueviolet;
+  color: chartreuse;
 }
 .developerRLetter {
+  color: blueviolet;
+  background-color: darkseagreen;
 }
 
 /* TAKE word */
 
 .takeTLetter {
+  color: blue;
+  background-color: mediumpurple;
 }
 .takeALetter {
+  background-color: blueviolet;
+  color: hotpink;
 }
 .takeKLetter {
+  background-color: hotpink;
+  color: burlywood;
 }
 .takeELetter {
+  background-color: mediumpurple;
+  color: lightgray;
 }
 
 /* UP word */
 
 .upULetter {
+  background-color: hotpink;
+  color: aqua;
 }
 .upPLetter {
+  color: blue;
+  background-color: darksalmon;
 }
 
 /* GARDENING word */
 
 .gardeningGLetter {
+  color: darkgreen;
 }
 .gardeningALetter {
+  background-color: aquamarine;
+  color: hotpink;
 }
 .gardeningRLetter {
+  background-color: aqua;
+  color: orange;
 }
 .gardeningDLetter {
+  color: red;
+  background-color: mediumslateblue;
 }
 .gardeningELetter {
+  background-color: lime;
+  color: olive;
 }
 .gardeningNLetter {
+  color: hotpink;
+  background-color: cadetblue;
 }
 .gardeningILetter {
+  color: blueviolet;
+  background-color: skyblue;
 }
 .gardeningNTwoLetter {
+  background-color: brown;
+  color: bisque;
 }
 .gardeningGTwoLetter {
+  background-color: lightseagreen;
+  color: lightseagreen;
 }
 
 /* BECAUSE word */
 
 .becauseBLetter {
+  color: blueviolet;
+  background-color: lawngreen;
 }
 .becauseELetter {
+  background-color: darkolivegreen;
+  color: blue;
 }
 .becauseCLetter {
+  background-color: aqua;
+  color: greenyellow;
 }
 .becauseALetter {
+  color: pink;
+  background-color: brown;
 }
 .becauseULetter {
+  background-color: darkolivegreen;
+  color: blue;
 }
 .becauseSLetter {
+  color: brown;
 }
 .becauseETwoLetter {
+  background-color: blueviolet;
+  color: beige;
 }
 
 /* THEY word */
 
 .theyTLetter {
+  background-color: lightgreen;
+  color: darkolivegreen;
 }
 .theyHLetter {
+  background-color: brown;
+  color: lime;
 }
 .theyELetter {
+  background-color: blueviolet;
+  color: tomato;
 }
 .theyYLetter {
+  background-color: yellowgreen;
+  color: yellowgreen;
 }
 
 /* WANTED word */
 
 .wantedWLetter {
+  background-color: skyblue;
+  color: snow;
 }
 .wantedALetter {
+  background-color: lightgreen;
+  color: blue;
 }
 .wantedNLetter {
+  background-color: hotpink;
+  color: brown;
 }
 .wantedTLetter {
+  background-color: darkseagreen;
+  color: burlywood;
 }
 .wantedELetter {
+  color: goldenrod;
+  background-color: blanchedalmond;
 }
 .wantedDLetter {
+  background-color: hotpink;
+  color: lime;
 }
 
 /* TO word */
 
 .toTLetter {
+  color: lime;
+  background-color: plum;
 }
 .toOLetter {
+  color: brown;
+  background-color: rosybrown;
 }
 
 /* IMPROVE word */
 
 .improveILetter {
+  background-color: blue;
+  color: greenyellow;
 }
 .improveMLetter {
+  background-color: palegoldenrod;
+  color: yellow;
 }
 .improvePLetter {
+  color: yellow;
+  background-color: fuchsia;
 }
 .improveRLetter {
+  background-color: mediumslateblue;
+  color: palegoldenrod;
 }
 .improveOLetter {
+  color: blue;
+  background-color: skyblue;
 }
 .improveVLetter {
+  color: brown;
+  background-color: blanchedalmond;
 }
 .improveELetter {
+  background-color: blue;
+  color: lightcyan;
 }
 
 /* THEIR word */
 
 .theirTLetter {
+  color: seashell;
+  background-color: teal;
 }
 .theirHLetter {
+  background-color: mediumvioletred;
+  color: seashell;
 }
 .theirELetter {
+  background-color: green;
+  color: peru;
 }
 .theirILetter {
+  background-color: mediumpurple;
+  color: aliceblue;
 }
 .theirRLetter {
+  background-color: tomato;
+  color: peru;
 }
 
 /* ROOT word */
 
 .rootRLetter {
+  color: palegoldenrod;
 }
 .rootOLetter {
+  background-color: yellow;
+  color: green;
 }
 .rootOTwoLetter {
+  background-color: yellowgreen;
+  color: brown;
 }
 .rootTLetter {
+  background-color: mediumseagreen;
+  color: teal;
 }
 
 /* SKILLS word */
 
 .skillsSLetter {
+  background-color: skyblue;
+  color: orange;
 }
 .skillsKLetter {
+  color: fuchsia;
+  background-color: bisque;
 }
 .skillsILetter {
+  background-color: orange;
+  color: gray;
 }
 .skillsLLetter {
+  background-color: skyblue;
+  color: aqua;
 }
 .skillsLTwoLetter {
+  background-color: lawngreen;
+  color: burlywood;
 }
 .skillsSTwoLetter {
+  background-color: blue;
+  color: aquamarine;
 }
 
 /* SYMBOLS */
 
 .hyphen {
+  background-color: green;
+  color: lime;
 }
 .exclamation-mark {
+  background-color: blueviolet;
+  color: pink;
 }
 .question-mark {
+  background-color: darkolivegreen;
+  color: palevioletred;
 }
